Link to new API

--- a/index.html
+++ b/index.html
@@ -65,11 +65,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <pre class="highlight plaintext"><code>https://api.bookwhen.com/v1
 </code></pre>
 
-<p>Welcome to the <strong>Bookwhen Public API</strong> docs.</p>
+<p>Welcome to the <strong>Bookwhen Public API v1</strong> docs.</p>
 
-<p>Bookwhen is a flexible booking system for recurring events such as classes, courses, and workshops. This API is used by the public pages to list events and take bookings. Contact <a href="mailto:support@bookwhen.com?Subject=Bookwhen%20API" target="_top">support@bookwhen.com</a> to make a request for additional resources.
-<br><br>Bookwhen plans to launch an enhanced version of this API in Summer 2019. The increased scope will include webhooks and attendee data. <a href="https://mailchi.mp/dd9898c5892c/bookwhenapi">Sign up to our newsletter here</a> to keep up with developments.</p>
-
+<p>
+  Bookwhen is a flexible booking system for recurring events such as classes, courses, and workshops. This API is used by the public pages to list events and take bookings. Contact <a href="mailto:support@bookwhen.com?Subject=Bookwhen%20API" target="_top">support@bookwhen.com</a> to make a request for additional resources.
+  <br><br>
+  We have a new version of the API. For more details see: <a href="https://api.bookwhen.com/v2">https://api.bookwhen.com/v2</a>
+</p>
+  
           <h1 id="authentication">Authentication</h1>
 
 <blockquote>
