Update favicon and Bookwhen API logo with latest versions, add other favicons

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Online Booking System API | Bookwhen</title>
     <meta name="description" content="Online Booking System API by Bookwhen. Used for classes, courses, workshops & events across a broad range of industries." />
+
+    <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#53b17b">
     
     <link href="stylesheets/screen.css" rel="stylesheet" type="text/css" media="screen" />
     <link href="stylesheets/print.css" rel="stylesheet" type="text/css" media="print" />
@@ -38,7 +42,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </span>
     </a>
     <div class="tocify-wrapper">
-      <a href="https://bookwhen.com"><img src="images/api_docs_header.png" /></a>
+      <a href="https://bookwhen.com"><img src="images/bookwhen_api_logo.svg" /></a>
         <div class="lang-selector">
               <a href="#" data-language-name="curl">curl</a>
         </div>
